--- a/holidays.html
+++ b/holidays.html
@@ -16,3 +16,12 @@
 • We had breakfast in the hotel's "Clove restaurant".• Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
 • Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<>
 • Afterwards we decided to go to Har ki Pauri Ghat but we got a huge traffic jam ahead. Finally we were able to see Ganga aarti in the evening. We also washed our faces with the cold running holy water.<br>
+
+<h3>9th June 2022</h3>
+• Today's mission was to bathe in River Ganga .We all got ready to go after having light breakfast.<br>
+• Water was much cold and after bathing we went to Mandir and also got Prasad.<br>
+• Then we also dined in the famous "Chotiwala Restaurant".<br>
+• Finally we set off for our home and in the way we had some snacks.<br>
+
+</body>
+</html>
