--- a/holidays.html
+++ b/holidays.html
@@ -14,7 +14,7 @@
 
 <h3>8th June 2022</h3>
 • We had breakfast in the hotel's "Clove restaurant".• Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
-• Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<>
+• Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
 • Afterwards we decided to go to Har ki Pauri Ghat but we got a huge traffic jam ahead. Finally we were able to see Ganga aarti in the evening. We also washed our faces with the cold running holy water.<br>
 
 <h3>9th June 2022</h3>
