--- a/holidays.html
+++ b/holidays.html
@@ -39,5 +39,11 @@
 • Then we also dined in the famous "Chotiwala Restaurant".<br>
 • Finally we set off for our home and in the way we had some snacks.<br>
 
+<footer>
+        <span>Created By ProHarshit | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+    </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
