--- a/holidays.html
+++ b/holidays.html
@@ -21,6 +21,9 @@
         <div class="max-width">
             <div class="logo"><a href="#">ProHars<span>hit</span></a></div>
 
+<section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
 <p><h3>7th June 2022</h3>
 • After much planning, we finally decided to go to Haridwar in afternoon 4:00 p.m.<br>
 • It was Suzuki ertiga, an SUV and we 8 people, my mom, dad, brother, uncle, aunt and two cousins.<br>
@@ -38,6 +41,9 @@
 • Water was much cold and after bathing we went to Mandir and also got Prasad.<br>
 • Then we also dined in the famous "Chotiwala Restaurant".<br>
 • Finally we set off for our home and in the way we had some snacks.<br>
+</div>
+        </div>
+    </section>
 
 <footer>
         <span>Created By ProHarshit | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
