--- a/holidays.html
+++ b/holidays.html
@@ -17,6 +17,7 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">ProHars<span>hit</span></a></div>
+        </div>
 
 <section class="home" id="home">
         <div class="max-width">
