--- a/holidays.html
+++ b/holidays.html
@@ -18,6 +18,7 @@
         <div class="max-width">
             <div class="logo"><a href="#">ProHars<span>hit</span></a></div>
         </div>
+    </nav>
 
 <section class="home" id="home">
         <div class="max-width">
