--- a/holidays.html
+++ b/holidays.html
@@ -41,6 +41,7 @@
 • Then we also dined in the famous "Chotiwala Restaurant".<br>
 • Finally we set off for our home and in the way we had some snacks.<br>
 </div>
+</div>
         </div>
     </section>
 
