--- a/holidays.html
+++ b/holidays.html
@@ -30,12 +30,12 @@
 • We kept playing all the ride and when we reach Haridwar I ate my stomach full at the Dhaba.<br>
 • Finally we reached Hotel Natraj, a four-star hotel in Rishikesh and the fact is we got joint rooms and an interconnecting door which was locked!<br>
 
-<h3>8th June 2022</h3>
+<p><h3>8th June 2022</h3>
 • We had breakfast in the hotel's "Clove restaurant".• Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
 • Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
 • Afterwards we decided to go to Har ki Pauri Ghat but we got a huge traffic jam ahead. Finally we were able to see Ganga aarti in the evening. We also washed our faces with the cold running holy water.<br>
 
-<h3>9th June 2022</h3>
+<p><h3>9th June 2022</h3>
 • Today's mission was to bathe in River Ganga .We all got ready to go after having light breakfast.<br>
 • Water was much cold and after bathing we went to Mandir and also got Prasad.<br>
 • Then we also dined in the famous "Chotiwala Restaurant".<br>
