--- a/holidays.html
+++ b/holidays.html
@@ -45,7 +45,7 @@
         </div>
     </section>
 
-<footer>
+<br><footer>
         <span>Created By ProHarshit | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
     </footer>
 
