--- a/holidays.html
+++ b/holidays.html
@@ -31,7 +31,7 @@
 • Finally we reached Hotel Natraj, a four-star hotel in Rishikesh and the fact is we got joint rooms and an interconnecting door which was locked!<br>
 
 <p><h3>8th June 2022</h3>
-• We had breakfast in the hotel's "Clove restaurant".• Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
+• We had breakfast in the hotel's "Clove restaurant".<br>
 • Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
 • Afterwards we decided to go to Har ki Pauri Ghat but we got a huge traffic jam ahead. Finally we were able to see Ganga aarti in the evening. We also washed our faces with the cold running holy water.<br>
 
