--- a/holidays.html
+++ b/holidays.html
@@ -20,9 +20,9 @@
         </div>
     </nav>
 
-<section class="home" id="home">
+<section class="about" id="about">
         <div class="max-width">
-            <div class="home-content">
+            <div class="about-content">
 <p><h3>7th June 2022</h3>
 • After much planning, we finally decided to go to Haridwar in afternoon 4:00 p.m.<br>
 • It was Suzuki ertiga, an SUV and we 8 people, my mom, dad, brother, uncle, aunt and two cousins.<br>
