--- a/holidays.html
+++ b/holidays.html
@@ -17,25 +17,28 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">ProHars<span>hit</span></a></div>
+            <div class="text-1">Hello, my name is</div>
+            <div class="text-2">Harshit Singh</div>
+            <div class="text-3">And I'm a <span class="typing"></span></div>
         </div>
     </nav>
 
 <section class="about" id="about">
         <div class="max-width">
             <div class="about-content">
-<p><h3>7th June 2022</h3>
+<p><h3 class="text-2">7th June 2022</h3>
 • After much planning, we finally decided to go to Haridwar in afternoon 4:00 p.m.<br>
 • It was Suzuki ertiga, an SUV and we 8 people, my mom, dad, brother, uncle, aunt and two cousins.<br>
 • I said with my cousin and my younger brother at the last seat.<br>
 • We kept playing all the ride and when we reach Haridwar I ate my stomach full at the Dhaba.<br>
 • Finally we reached Hotel Natraj, a four-star hotel in Rishikesh and the fact is we got joint rooms and an interconnecting door which was locked!<br>
 
-<p><h3>8th June 2022</h3>
+<p><h3 class ="text-2">8th June 2022</h3>
 • We had breakfast in the hotel's "Clove restaurant".<br>
 • Then after refreshment we went to Lakshman Jhula which was closed but we still clicked photographs.<br>
 • Afterwards we decided to go to Har ki Pauri Ghat but we got a huge traffic jam ahead. Finally we were able to see Ganga aarti in the evening. We also washed our faces with the cold running holy water.<br>
 
-<p><h3>9th June 2022</h3>
+<p><h3 class="text-2">9th June 2022</h3>
 • Today's mission was to bathe in River Ganga .We all got ready to go after having light breakfast.<br>
 • Water was much cold and after bathing we went to Mandir and also got Prasad.<br>
 • Then we also dined in the famous "Chotiwala Restaurant".<br>
