--- a/holidays.html
+++ b/holidays.html
@@ -17,13 +17,22 @@
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">ProHars<span>hit</span></a></div>
-            <div class="text-1">Hello, my name is</div>
-            <div class="text-2">Harshit Singh</div>
-            <div class="text-3">And I'm a <span class="typing"></span></div>
+         
         </div>
     </nav>
 
-<section class="about" id="about">
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Harshit Singh</div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
+                <a href="#">Who Am I</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="about" id="about">
         <div class="max-width">
             <div class="about-content">
 <p><h3 class="text-2">7th June 2022</h3>
