--- a/holidays.html
+++ b/holidays.html
@@ -32,7 +32,7 @@
     </section>
 
     <section class="about" id="about">
-        <div class="max-width">
+        <div class="max-width"><br>
             <h1>My Experience Of Haridwar</h2>
                  <div class="about-content">
 <p><h3 align="center">7th June 2022</h3><br>
@@ -53,15 +53,15 @@
 • Then we also dined in the famous "Chotiwala Restaurant".<br>
 • Finally we set off for our home and in the way we had some snacks.<br>
 
-<p><h2>So I would request you to visit Hardiwar too</h2><br>
-<h1>Thank You</h1>
+<br><h2>So I would request you to visit Hardiwar too</h2><br><br>
+<h1><span class="fa fa-star"></span>Thank You</h1>
 
 </div>
         </div>
     </section>
 
     <footer>
-        <span>Created By ProHarshit | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <span>Created By ProHarshit | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
 <script src="script.js"></script>
