--- a/holidays.html
+++ b/holidays.html
@@ -54,7 +54,7 @@
 • Finally we set off for our home and in the way we had some snacks.<br>
 
 <br><h2>So I would request you to visit Hardiwar too</h2><br><br>
-<h1><span class="fa fa-star"></span>Thank You</h1>
+<h1><span class="fa fa-star checked"></span>Thank You<span class="fa fa-star checked"></span></h1>
 
 </div>
         </div>
