--- a/holidays.html
+++ b/holidays.html
@@ -26,7 +26,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Harshit Singh</div>
-                <div class="text-3">And today I will be sharing my experience In Haridwar</div>
+                <div class="text-3">And here is my experience In Haridwar</div>
             </div>
         </div>
     </section>
