--- a/holidays.html
+++ b/holidays.html
@@ -33,7 +33,7 @@
 
     <section class="about" id="about">
         <div class="max-width"><br>
-            <h1>My Experience Of Haridwar</h2>
+            <h1>My Experience In Haridwar</h2>
                  <div class="about-content">
 <p><h3 align="center">7th June 2022</h3><br>
 • After much planning, we finally decided to go to Haridwar in afternoon 4:00 p.m.<br>
